--- a/en/index.html
+++ b/en/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Hotel & Restaurant. Book direct via WhatsApp. Menu, rooms, location and hours." />
 
   <meta name="theme-color" content="#07070a" />
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="icon" href="/assets/logo_casona.png" type="image/png" />
+  <link rel="stylesheet" href="../style.css" />
+  <link rel="icon" href="../assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/en/index.html" />
   <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/index.html" />
@@ -53,8 +53,8 @@
   <header>
     <div class="container nav">
       <div class="brand brand-row">
-        <a href="/en/index.html" class="brand-link" aria-label="Casona Belga - Home">
-          <img src="/assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
+        <a href="./index.html" class="brand-link" aria-label="Casona Belga - Home">
+          <img src="../assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
             <span>Hotel & Restaurant · Chile Chico</span>
@@ -63,12 +63,12 @@
       </div>
 
       <nav class="menu" aria-label="Navigation">
-        <a href="/en/menu.html">Restaurant</a>
-        <a href="/en/rooms.html">Rooms</a>
-        <a href="/en/contact.html">Contact</a>
+        <a href="menu.html">Restaurant</a>
+        <a href="rooms.html">Rooms</a>
+        <a href="contact.html">Contact</a>
 
         <!-- Language -->
-        <a class="btn" href="/index.html">ES</a>
+        <a class="btn" href="../index.html">ES</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">
           Book via WhatsApp
@@ -89,7 +89,7 @@
           <div class="cta-row">
             <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🟢 Book a table</a>
             <a class="btn" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🛏️ Check availability</a>
-            <a class="btn" href="/en/menu.html">🍽️ View menu</a>
+            <a class="btn" href="menu.html">🍽️ View menu</a>
           </div>
 
           <div class="badges" aria-label="Quick info">
@@ -111,7 +111,7 @@
           </div>
           <div class="cta-row">
             <a class="btn" href="https://www.google.com/maps/place/Casona+Belga+Restaurante/data=!4m2!3m1!1s0x0:0x537620c01beb3f06?sa=X&ved=1t:2428&hl=en-GB&ictx=111" target="_blank" rel="noopener">🗺️ Open in Maps</a>
-            <a class="btn" href="/en/contact.html">📞 Contact</a>
+            <a class="btn" href="contact.html">📞 Contact</a>
           </div>
         </div>
       </div>
@@ -127,7 +127,7 @@
           </div>
           <div class="cta-row">
             <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Book</a>
-            <a class="btn" href="/en/menu.html">View menu</a>
+            <a class="btn" href="menu.html">View menu</a>
           </div>
         </div>
 
@@ -137,7 +137,7 @@
             <span>Rooms, “from” rates, policies, and WhatsApp inquiries.</span>
           </div>
           <div class="cta-row">
-            <a class="btn" href="/en/rooms.html">View rooms</a>
+            <a class="btn" href="rooms.html">View rooms</a>
             <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Inquire</a>
           </div>
         </div>
@@ -167,7 +167,7 @@
   <div class="mobile-bar" role="navigation" aria-label="Quick actions">
     <div class="inner">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Book</a>
-      <a class="btn" href="/en/rooms.html">Rooms</a>
+      <a class="btn" href="rooms.html">Rooms</a>
     </div>
   </div>
 
