--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Casona Belga | Hotel & Restaurante</title>
   <meta name="description" content="Hotel & Restaurante. Reserva directa por WhatsApp. Restaurante, Hotel, Ubicación y Horarios." />
 
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="icon" href="/assets/logo_casona.png" type="image/png" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="assets/logo_casona.png" type="image/png" />
   <meta name="theme-color" content="#07070a" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/index.html" />
@@ -53,8 +53,8 @@
   <header>
     <div class="container nav">
       <div class="brand brand-row">
-        <a href="/index.html" class="brand-link" aria-label="Casona Belga - Inicio">
-          <img src="/assets/logo_casona.png" alt="Logo Casona Belga" class="logo" />
+        <a href="./index.html" class="brand-link" aria-label="Casona Belga - Inicio">
+          <img src="assets/logo_casona.png" alt="Logo Casona Belga" class="logo" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
             <span>Hotel & Restaurante · Chile Chico</span>
@@ -63,12 +63,12 @@
       </div>
 
       <nav class="menu" aria-label="Navegación">
-        <a href="/carta.html">Restaurante</a>
-        <a href="/habitaciones.html">Hotel</a>
-        <a href="/contacto.html">Contacto</a>
+        <a href="carta.html">Restaurante</a>
+        <a href="habitaciones.html">Hotel</a>
+        <a href="contacto.html">Contacto</a>
 
         <!-- Idioma -->
-        <a class="btn" href="/en/index.html">EN</a>
+        <a class="btn" href="en/index.html">EN</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">
           Reservar por WhatsApp
@@ -89,7 +89,7 @@
           <div class="cta-row">
             <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🟢 Reservar mesa</a>
             <a class="btn" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🛏️ Consultar disponibilidad</a>
-            <a class="btn" href="/carta.html">🍽️ Ver carta</a>
+            <a class="btn" href="carta.html">🍽️ Ver carta</a>
           </div>
 
           <div class="badges" aria-label="Información rápida">
@@ -111,7 +111,7 @@
           </div>
           <div class="cta-row">
             <a class="btn" href="https://www.google.com/maps/place/Casona+Belga+Restaurante/data=!4m2!3m1!1s0x0:0x537620c01beb3f06?sa=X&ved=1t:2428&hl=en-GB&ictx=111" target="_blank" rel="noopener">🗺️ Abrir en Maps</a>
-            <a class="btn" href="/contacto.html">📞 Contacto</a>
+            <a class="btn" href="contacto.html">📞 Contacto</a>
           </div>
         </div>
       </div>
@@ -136,7 +136,7 @@
             <span>Habitaciones, precios “desde”, políticas y consulta por WhatsApp.</span>
           </div>
           <div class="cta-row">
-            <a class="btn" href="/habitaciones.html">Ver habitaciones</a>
+            <a class="btn" href="habitaciones.html">Ver habitaciones</a>
             <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Consultar</a>
           </div>
         </div>
