--- a/contacto.html
+++ b/contacto.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Contacto, ubicación, horarios y WhatsApp directo." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="icon" href="/assets/logo_casona.png" type="image/png" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/contacto.html" />
   <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/contacto.html" />
@@ -20,8 +20,8 @@
   <header>
     <div class="container nav">
       <div class="brand brand-row">
-        <a href="/index.html" class="brand-link" aria-label="Casona Belga - Inicio">
-          <img src="/assets/logo_casona.png" alt="Logo Casona Belga" class="logo" />
+        <a href="./index.html" class="brand-link" aria-label="Casona Belga - Inicio">
+          <img src="assets/logo_casona.png" alt="Logo Casona Belga" class="logo" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
             <span>Contacto</span>
@@ -30,11 +30,11 @@
       </div>
 
       <nav class="menu">
-        <a href="/carta.html">Restaurante</a>
-        <a href="/habitaciones.html">Hotel</a>
+        <a href="carta.html">Restaurante</a>
+        <a href="habitaciones.html">Hotel</a>
 
         <!-- Idioma -->
-        <a class="btn" href="/en/contact.html">EN</a>
+        <a class="btn" href="en/contact.html">ENGLISH</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">WhatsApp</a>
       </nav>
