--- a/en/contact.html
+++ b/en/contact.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Contact, location, opening hours, and direct WhatsApp." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="icon" href="/assets/logo_casona.png" type="image/png" />
+  <link rel="stylesheet" href="../style.css" />
+  <link rel="icon" href="../assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/en/contact.html" />
   <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/contact.html" />
@@ -20,8 +20,8 @@
   <header>
     <div class="container nav">
       <div class="brand brand-row">
-        <a href="/en/index.html" class="brand-link" aria-label="Casona Belga - Home">
-          <img src="/assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
+        <a href="./index.html" class="brand-link" aria-label="Casona Belga - Home">
+          <img src="../assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
             <span>Contact</span>
@@ -30,11 +30,11 @@
       </div>
 
       <nav class="menu">
-        <a href="/en/menu.html">Restaurant</a>
-        <a href="/en/rooms.html">Rooms</a>
+        <a href="menu.html">Restaurant</a>
+        <a href="rooms.html">Rooms</a>
 
         <!-- Language -->
-        <a class="btn" href="/contacto.html">ES</a>
+        <a class="btn" href="../contacto.html">ESPAÑOL</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">WhatsApp</a>
       </nav>
