--- a/en/index.html
+++ b/en/index.html
@@ -68,7 +68,7 @@
         <a href="contact.html">Contact</a>
 
         <!-- Language -->
-        <a class="btn" href="../index.html">ES</a>
+        <a class="btn" href="../index.html">ESPAÑOL</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">
           Book via WhatsApp
