--- a/en/menu.html
+++ b/en/menu.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Casona Belga Restaurant Menu 2025–2026 season. Book via WhatsApp." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="icon" href="/assets/logo_casona.png" type="image/png" />
+  <link rel="stylesheet" href="../style.css" />
+  <link rel="icon" href="../assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/en/menu.html" />
   <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/menu.html" />
@@ -20,8 +20,8 @@
   <header>
     <div class="container nav">
       <div class="brand brand-row">
-        <a href="/en/index.html" class="brand-link" aria-label="Casona Belga - Home">
-          <img src="/assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
+        <a href="./index.html" class="brand-link" aria-label="Casona Belga - Home">
+          <img src="../assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
             <span>Restaurant · 2025–2026 Season Menu</span>
@@ -30,11 +30,11 @@
       </div>
 
       <nav class="menu">
-        <a href="/en/rooms.html">Rooms</a>
-        <a href="/en/contact.html">Contact</a>
+        <a href="rooms.html">Rooms</a>
+        <a href="contact.html">Contact</a>
 
         <!-- Language -->
-        <a class="btn" href="/carta.html">ES</a>
+        <a class="btn" href="../carta.html">ESPAÑOL</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Book</a>
       </nav>
@@ -47,7 +47,7 @@
 
     <div class="cta-row">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🟢 Book a table</a>
-      <a class="btn" href="/en/index.html">⬅ Back</a>
+      <a class="btn" href="index.html">⬅ Back</a>
     </div>
 
     <hr class="sep" />
@@ -200,7 +200,7 @@
   <div class="mobile-bar">
     <div class="inner">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Book</a>
-      <a class="btn" href="/en/rooms.html">Rooms</a>
+      <a class="btn" href="rooms.html">Rooms</a>
     </div>
   </div>
 </body>
