--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <a href="contacto.html">Contacto</a>
 
         <!-- Idioma -->
-        <a class="btn" href="en/index.html">EN</a>
+        <a class="btn" href="en/index.html">ENGLISH</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">
           Reservar por WhatsApp
