--- a/carta.html
+++ b/carta.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Carta Restaurante Casona Belga Temporada 2025–2026. Reserva por WhatsApp." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="icon" href="/assets/logo_casona.png" type="image/png" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/carta.html" />
   <link rel="alternate" hreflang="es" href="https://www.casonabelga.cl/carta.html" />
@@ -20,8 +20,8 @@
   <header>
     <div class="container nav">
       <div class="brand brand-row">
-        <a href="/index.html" class="brand-link" aria-label="Casona Belga - Inicio">
-          <img src="/assets/logo_casona.png" alt="Logo Casona Belga" class="logo" />
+        <a href="./index.html" class="brand-link" aria-label="Casona Belga - Inicio">
+          <img src="assets/logo_casona.png" alt="Logo Casona Belga" class="logo" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
             <span>Restaurante · Carta Temporada 2025–2026</span>
@@ -30,11 +30,11 @@
       </div>
 
       <nav class="menu">
-        <a href="/habitaciones.html">Hotel</a>
-        <a href="/contacto.html">Contacto</a>
+        <a href="habitaciones.html">Hotel</a>
+        <a href="contacto.html">Contacto</a>
 
         <!-- Idioma -->
-        <a class="btn" href="/en/menu.html">EN</a>
+        <a class="btn" href="en/menu.html">ENGLISH</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Reservar</a>
       </nav>
@@ -47,7 +47,7 @@
 
     <div class="cta-row">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🟢 Reservar mesa</a>
-      <a class="btn" href="/index.html">⬅ Volver</a>
+      <a class="btn" href="index.html">⬅ Volver</a>
     </div>
 
     <hr class="sep" />
