--- a/en/rooms.html
+++ b/en/rooms.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Rooms, rates from, policies, and availability inquiries via WhatsApp." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="icon" href="/assets/logo_casona.png" type="image/png" />
+  <link rel="stylesheet" href="../style.css" />
+  <link rel="icon" href="../assets/logo_casona.png" type="image/png" />
 
   <link rel="canonical" href="https://www.casonabelga.cl/en/rooms.html" />
   <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/rooms.html" />
@@ -20,8 +20,8 @@
   <header>
     <div class="container nav">
       <div class="brand brand-row">
-        <a href="/en/index.html" class="brand-link" aria-label="Casona Belga - Home">
-          <img src="/assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
+        <a href="./index.html" class="brand-link" aria-label="Casona Belga - Home">
+          <img src="../assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
             <span>Hotel · Rooms</span>
@@ -30,10 +30,10 @@
       </div>
 
       <nav class="menu">
-        <a href="/en/menu.html">Restaurant</a>
-        <a href="/en/contact.html">Contact</a>
+        <a href="menu.html">Restaurant</a>
+        <a href="contact.html">Contact</a>
 
-        <a class="btn" href="/habitaciones.html">ES</a>
+        <a class="btn" href="../habitaciones.html">ESPAÑOL</a>
 
         <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Inquire</a>
       </nav>
@@ -48,7 +48,7 @@
 
     <div class="cta-row">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🛏️ Check availability</a>
-      <a class="btn" href="/en/index.html">⬅ Back</a>
+      <a class="btn" href="index.html">⬅ Back</a>
     </div>
 
     <hr class="sep" />
@@ -143,7 +143,7 @@
   <div class="mobile-bar">
     <div class="inner">
       <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Inquire</a>
-      <a class="btn" href="/en/contact.html">Contact</a>
+      <a class="btn" href="contact.html">Contact</a>
     </div>
   </div>
 </body>
