--- a/carta.html
+++ b/carta.html
@@ -57,20 +57,20 @@
       <div class="card">
         <h2>Entradas</h2>
         <div class="list">
-          <div class="item"><div class="title">Ceviche de Salmón</div><div class="price">$ 15.500</div></div>
-          <div class="item"><div class="title">Tártaro de Filete res en tostadas de masa madre</div><div class="price">$ 15.500</div></div>
-          <div class="item"><div class="title">Tártaro de Betarraga con quinoa crocante</div><div class="price">$ 14.500</div></div>
-          <div class="item"><div class="title">Crema de Zapallo con zanahoria y jengibre</div><div class="price">$ 9.000</div></div>
-          <div class="item"><div class="title">Crema de Lentejas</div><div class="price">$ 9.000</div></div>
+          <div class="item"><div class="title">Ceviche de Salmón</div><div class="desc">(Cubos de salmón fresco marinados en limón, cilantro y cebolla morada)</div><div class="price">$ 15.500</div></div>
+          <div class="item"><div class="title">Tártaro de Filete res en tostadas de masa madre</div><div class="desc">(Filete de res picado a cuchillo con alcaparras y mostaza dijon sobre tostadas artesanales)</div><div class="price">$ 15.500</div></div>
+          <div class="item"><div class="title">Tártaro de Betarraga con quinoa crocante</div><div class="desc">(Betarraga asada, aderezo cítrico y quinoa crocante)</div><div class="price">$ 14.500</div></div>
+          <div class="item"><div class="title">Crema de Zapallo con zanahoria y jengibre</div><div class="desc">(Suave crema de zapallo y zanahoria con toque de jengibre)</div><div class="price">$ 9.000</div></div>
+          <div class="item"><div class="title">Crema de Lentejas</div><div class="desc">(Crema casera de lentejas, reconfortante)</div><div class="price">$ 9.000</div></div>
         </div>
       </div>
 
       <div class="card">
         <h2>Fondos + acomp. + salsa</h2>
         <div class="list">
-          <div class="item"><div class="title">Medallón de Filete o Lomo vetado grillado, 220 grs</div><div class="price">$ 22.500</div></div>
-          <div class="item"><div class="title">Merluza Austral a la plancha, 230 grs</div><div class="price">$ 21.500</div></div>
-          <div class="item"><div class="title">Salmón a la plancha, 230 grs</div><div class="price">$ 23.500</div></div>
+          <div class="item"><div class="title">Medallón de Filete o Lomo vetado grillado, 220 grs</div><div class="desc">(Corte premium a la parrilla, a punto, con acompañamiento y salsa a elección)</div><div class="price">$ 22.500</div></div>
+          <div class="item"><div class="title">Merluza Austral a la plancha, 230 grs</div><div class="desc">(Filete fresco a la plancha, piel crocante)</div><div class="price">$ 21.500</div></div>
+          <div class="item"><div class="title">Salmón a la plancha, 230 grs</div><div class="desc">(Salmón patagónico sellado a la plancha)</div><div class="price">$ 23.500</div></div>
         </div>
 
         <hr class="sep" />
