--- a/en/menu.html
+++ b/en/menu.html
@@ -57,20 +57,20 @@
       <div class="card">
         <h2>Starters</h2>
         <div class="list">
-          <div class="item"><div class="title">Salmon ceviche</div><div class="price">$ 15.500</div></div>
-          <div class="item"><div class="title">Beef filet tartare on sourdough toasts</div><div class="price">$ 15.500</div></div>
-          <div class="item"><div class="title">Beet tartare with crispy quinoa</div><div class="price">$ 14.500</div></div>
-          <div class="item"><div class="title">Pumpkin cream soup with carrot and ginger</div><div class="price">$ 9.000</div></div>
-          <div class="item"><div class="title">Lentil cream soup</div><div class="price">$ 9.000</div></div>
+          <div class="item"><div class="title">Salmon ceviche</div><div class="desc">(Fresh salmon cubes marinated in lime, cilantro and red onion)</div><div class="price">$ 15.500</div></div>
+          <div class="item"><div class="title">Beef filet tartare on sourdough toasts</div><div class="desc">(Hand-chopped beef with capers and Dijon, served on artisan sourdough)</div><div class="price">$ 15.500</div></div>
+          <div class="item"><div class="title">Beet tartare with crispy quinoa</div><div class="desc">(Roasted beet tartare, citrus dressing and crunchy quinoa)</div><div class="price">$ 14.500</div></div>
+          <div class="item"><div class="title">Pumpkin cream soup with carrot and ginger</div><div class="desc">(Silky pumpkin and carrot soup with a hint of ginger)</div><div class="price">$ 9.000</div></div>
+          <div class="item"><div class="title">Lentil cream soup</div><div class="desc">(House-made creamy lentil soup)</div><div class="price">$ 9.000</div></div>
         </div>
       </div>
 
       <div class="card">
         <h2>Main dishes + sides + sauces</h2>
         <div class="list">
-          <div class="item"><div class="title">Grilled filet medallion or marbled striploin, 220 g</div><div class="price">$ 22.500</div></div>
-          <div class="item"><div class="title">Pan-seared Southern hake, 230 g</div><div class="price">$ 21.500</div></div>
-          <div class="item"><div class="title">Pan-seared salmon, 230 g</div><div class="price">$ 23.500</div></div>
+          <div class="item"><div class="title">Grilled filet medallion or marbled striploin, 220 g</div><div class="desc">(Premium cut grilled to your liking, with side and sauce of choice)</div><div class="price">$ 22.500</div></div>
+          <div class="item"><div class="title">Pan-seared Southern hake, 230 g</div><div class="desc">(Fresh Southern hake with crispy skin)</div><div class="price">$ 21.500</div></div>
+          <div class="item"><div class="title">Pan-seared salmon, 230 g</div><div class="desc">(Patagonian salmon seared on the pan)</div><div class="price">$ 23.500</div></div>
         </div>
 
         <hr class="sep" />
