--- a/en/index.html
+++ b/en/index.html
@@ -101,8 +101,8 @@
 
         <div class="card">
           <div class="kv">
-            <strong>Hours</strong>
-            <span>Mon–Sun 12:30–22:30</span>
+            <strong>Casona Belga</strong>
+            <span>Restaurant: we follow Ayurvedic principles, cooking with organic, seasonal and locally sourced ingredients. Hotel: high‑tech beds for optimal rest, 1000‑thread‑count sheets, heating, Himalayan salt lamps and a work desk.</span>
           </div>
           <hr class="sep" />
           <div class="kv">
