--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
         <div class="card">
           <div class="kv">
-            <strong>Horario</strong>
-            <span>Lun–Dom 12:30–22:30</span>
+            <strong>Casona Belga</strong>
+            <span>Restaurante: aplicamos principios de la ayurveda y cocinamos con ingredientes orgánicos, locales y de temporada. Hotel: camas con tecnología de descanso para dormir mejor, sábanas de 1000 hilos, calefacción, lámparas de sal y escritorio para trabajar.</span>
           </div>
           <hr class="sep" />
           <div class="kv">
