--- a/en/index.html
+++ b/en/index.html
@@ -102,7 +102,7 @@
         <div class="card">
           <div class="kv">
             <strong>Casona Belga</strong>
-            <span>Restaurant: we follow Ayurvedic principles, cooking with organic, seasonal and locally sourced ingredients. Hotel: high‑tech beds for optimal rest, 1000‑thread‑count sheets, heating, Himalayan salt lamps and a work desk.</span>
+            <span>Casona Belga is a meeting point rooted in the history of Chile Chico, where we bring together great food and restorative rest with a sustainable approach on our path to becoming a B Corp. In our restaurant, we cook with organic, local, seasonal ingredients, work with artisanal fishers and dedicated market gardeners, and incorporate Ayurvedic principles; we’re also known for our cocktails made with Patagonian fruits. At the hotel, we prioritize deep rest for healthy recovery: premium mattresses, hypoallergenic pillows, 1,000-thread-count sheets, heating, salt lamps, and a desk for working—everything in a warm, welcoming atmosphere, with personalized service that makes every stay feel truly special.</span>
           </div>
           <hr class="sep" />
           <div class="kv">
