--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="card">
           <div class="kv">
             <strong>Casona Belga</strong>
-            <span>Restaurante: aplicamos principios de la ayurveda y cocinamos con ingredientes orgánicos, locales y de temporada. Hotel: camas con tecnología de descanso para dormir mejor, sábanas de 1000 hilos, calefacción, lámparas de sal y escritorio para trabajar.</span>
+            <span>La Casona Belga es un punto de encuentro con la historia de Chile Chico, donde combinamos gastronomía y descanso con un enfoque sostenible rumbo a ser Empresa B. En el restaurante, cocinamos con ingredientes orgánicos, locales y de temporada, trabajamos con pescadores artesanales y huerteros, e incorporamos principios de la ayurveda; además, destacamos por nuestros cócteles con frutas patagónicas. En el hotel, priorizamos el buen descanso para la sana recuperación del cuerpo: colchones premium, almohadas hipoalergénicas, sábanas de 1000 hilos, calefacción, lámparas de sal y escritorio para trabajar, todo en un ambiente cálido y acogedor, con atención personalizada para que cada estadía se sienta única.</span>
           </div>
           <hr class="sep" />
           <div class="kv">
