--- a/en/index.html
+++ b/en/index.html
@@ -101,8 +101,8 @@
 
         <div class="card">
           <div class="kv">
-            <strong>Casona Belga</strong>
-            <span>Casona Belga is a meeting point rooted in the history of Chile Chico, where we bring together great food and restorative rest with a sustainable approach on our path to becoming a B Corp. In our restaurant, we cook with organic, local, seasonal ingredients, work with artisanal fishers and dedicated market gardeners, and incorporate Ayurvedic principles; we’re also known for our cocktails made with Patagonian fruits. At the hotel, we prioritize deep rest for healthy recovery: premium mattresses, hypoallergenic pillows, 1,000-thread-count sheets, heating, salt lamps, and a desk for working—everything in a warm, welcoming atmosphere, with personalized service that makes every stay feel truly special.</span>
+            <strong>Casona Belga: Conscious Cuisine and Deep Rest</strong>
+            <span>Casona Belga is a meeting point rooted in the history of Chile Chico, where we bring together great food and restorative rest with a sustainable approach. In our restaurant, we cook with organic, local, seasonal ingredients, working with artisanal fishers and market gardeners, and incorporating principles of Ayurvedic medicine. Our cocktails, made with Patagonian fruits, are a highlight. At the hotel, we prioritize rest for healthy recovery: premium mattresses, 1,000-thread-count sheets, salt lamps, and much more. All in a warm, rustic setting with personalized service.</span>
           </div>
           <hr class="sep" />
           <div class="kv">
