--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
         <div class="card">
           <div class="kv">
-            <strong>Casona Belga</strong>
-            <span>La Casona Belga es un punto de encuentro con la historia de Chile Chico, donde combinamos gastronomía y descanso con un enfoque sostenible rumbo a ser Empresa B. En el restaurante, cocinamos con ingredientes orgánicos, locales y de temporada, trabajamos con pescadores artesanales y huerteros, e incorporamos principios de la ayurveda; además, destacamos por nuestros cócteles con frutas patagónicas. En el hotel, priorizamos el buen descanso para la sana recuperación del cuerpo: colchones premium, almohadas hipoalergénicas, sábanas de 1000 hilos, calefacción, lámparas de sal y escritorio para trabajar, todo en un ambiente cálido y acogedor, con atención personalizada para que cada estadía se sienta única.</span>
+            <strong>Casona Belga: Gastronomía Consciente y Descanso Profundo</strong>
+            <span>Casona Belga es un punto de encuentro con la historia de Chile Chico, donde unimos gastronomía y descanso con un enfoque sostenible. En el restaurante cocinamos con ingredientes orgánicos, locales y de temporada, junto a pescadores artesanales y huerteros, integrando principios de la medicina Ayurveda. Destacan nuestros cócteles con frutas patagónicas. En el hotel priorizamos el descanso para la sana recuperación del cuerpo: colchones premium, sábanas de 1000 hilos, lámparas de sal y mucho más. Todo en un ambiente cálido, rústico y con atención personalizada.</span>
           </div>
           <hr class="sep" />
           <div class="kv">
