--- a/en/menu.html
+++ b/en/menu.html
@@ -66,22 +66,22 @@
       </div>
 
       <div class="card">
-        <h2>Main dishes + sides + sauces</h2>
+        <h2>Main dishes + Sauces</h2>
         <div class="list">
-          <div class="item"><div class="title">Grilled filet medallion or marbled striploin, 220 g</div><div class="desc">(Premium cut grilled to your liking, with side and sauce of choice)</div><div class="price">$ 22.500</div></div>
-          <div class="item"><div class="title">Pan-seared Southern hake, 230 g</div><div class="desc">(Fresh Southern hake with crispy skin)</div><div class="price">$ 21.500</div></div>
-          <div class="item"><div class="title">Pan-seared salmon, 230 g</div><div class="desc">(Patagonian salmon seared on the pan)</div><div class="price">$ 23.500</div></div>
+          <div class="item"><div class="title">Grilled filet medallion, 220 g</div><div class="desc">(Premium cut grilled to your liking, with sauce of choice)</div><div class="price">$ 18.000</div></div>
+          <div class="item"><div class="title">Pan-seared Southern hake, 230 g</div><div class="desc">(Fresh Southern hake with crispy skin)</div><div class="price">$ 17.000</div></div>
+          <div class="item"><div class="title">Pan-seared salmon, 230 g</div><div class="desc">(Patagonian salmon seared on the pan)</div><div class="price">$ 19.000</div></div>
         </div>
 
         <hr class="sep" />
 
         <div class="kv">
           <strong>Sides</strong>
-          <span class="small">
-            • Sautéed vegetables (broccoli or cauliflower, eggplant or zucchini, onion, carrot, bell pepper)<br/>
-            • Rosemary roasted potatoes<br/>
-            • Fresh salad (mixed greens, arugula, mizuna, tomato, apple and seeds)
-          </span>
+        </div>
+        <div class="list">
+          <div class="item"><div class="title">Sautéed vegetables</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">Rosemary roasted potatoes</div><div class="price">$ 4.000</div></div>
+          <div class="item"><div class="title">Casona salad (lettuce, arugula, mizuna, tomato, apple and seeds)</div><div class="price">$ 4.500</div></div>
         </div>
 
         <div style="height:10px"></div>
