--- a/carta.html
+++ b/carta.html
@@ -68,9 +68,9 @@
       <div class="card">
         <h2>Fondos + Salsa</h2>
         <div class="list">
-          <div class="item"><div class="title">Medallón de Filete grillado, 220 grs</div><div class="desc">(Corte premium a la parrilla, a punto, con salsa a elección)</div><div class="price">$ 18.000</div></div>
-          <div class="item"><div class="title">Merluza Austral a la plancha, 230 grs</div><div class="desc">(Filete fresco a la plancha, piel crocante)</div><div class="price">$ 17.000</div></div>
-          <div class="item"><div class="title">Salmón a la plancha, 230 grs</div><div class="desc">(Salmón patagónico sellado a la plancha)</div><div class="price">$ 19.000</div></div>
+          <div class="item"><div class="title">Medallón de Filete grillado, 220 grs</div><div class="desc">(Corte premium a la parrilla, a punto, con salsa a elección)</div><div class="price">$ 22.500</div></div>
+          <div class="item"><div class="title">Merluza Austral a la plancha, 230 grs</div><div class="desc">(Filete fresco a la plancha, piel crocante)</div><div class="price">$ 21.500</div></div>
+          <div class="item"><div class="title">Salmón a la plancha, 230 grs</div><div class="desc">(Salmón patagónico sellado a la plancha)</div><div class="price">$ 23.500</div></div>
         </div>
 
         <hr class="sep" />
@@ -79,9 +79,9 @@
           <strong>Acompañamientos</strong>
         </div>
         <div class="list">
-          <div class="item"><div class="title">Verduras Salteadas</div><div class="price">$ 4.500</div></div>
-          <div class="item"><div class="title">Papas doradas al romero</div><div class="price">$ 4.000</div></div>
-          <div class="item"><div class="title">Ensalada Casona (lechuga, rúcula, mizuna, tomate, manzana y semillas)</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">Verduras Salteadas</div></div>
+          <div class="item"><div class="title">Papas doradas al romero</div></div>
+          <div class="item"><div class="title">Ensalada Casona (lechuga, rúcula, mizuna, tomate, manzana y semillas)</div></div>
         </div>
 
         <div style="height:10px"></div>
