--- a/en/menu.html
+++ b/en/menu.html
@@ -68,9 +68,9 @@
       <div class="card">
         <h2>Main dishes + Sauces</h2>
         <div class="list">
-          <div class="item"><div class="title">Grilled filet medallion, 220 g</div><div class="desc">(Premium cut grilled to your liking, with sauce of choice)</div><div class="price">$ 18.000</div></div>
-          <div class="item"><div class="title">Pan-seared Southern hake, 230 g</div><div class="desc">(Fresh Southern hake with crispy skin)</div><div class="price">$ 17.000</div></div>
-          <div class="item"><div class="title">Pan-seared salmon, 230 g</div><div class="desc">(Patagonian salmon seared on the pan)</div><div class="price">$ 19.000</div></div>
+          <div class="item"><div class="title">Grilled filet medallion, 220 g</div><div class="desc">(Premium cut grilled to your liking, with sauce of choice)</div><div class="price">$ 22.500</div></div>
+          <div class="item"><div class="title">Pan-seared Southern hake, 230 g</div><div class="desc">(Fresh Southern hake with crispy skin)</div><div class="price">$ 21.500</div></div>
+          <div class="item"><div class="title">Pan-seared salmon, 230 g</div><div class="desc">(Patagonian salmon seared on the pan)</div><div class="price">$ 23.500</div></div>
         </div>
 
         <hr class="sep" />
@@ -79,9 +79,9 @@
           <strong>Sides</strong>
         </div>
         <div class="list">
-          <div class="item"><div class="title">Sautéed vegetables</div><div class="price">$ 4.500</div></div>
-          <div class="item"><div class="title">Rosemary roasted potatoes</div><div class="price">$ 4.000</div></div>
-          <div class="item"><div class="title">Casona salad (lettuce, arugula, mizuna, tomato, apple and seeds)</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">Sautéed vegetables</div></div>
+          <div class="item"><div class="title">Rosemary roasted potatoes</div></div>
+          <div class="item"><div class="title">Casona salad (lettuce, arugula, mizuna, tomato, apple and seeds)</div></div>
         </div>
 
         <div style="height:10px"></div>
