--- a/carta.html
+++ b/carta.html
@@ -77,11 +77,11 @@
 
         <div class="kv">
           <strong>Acompañamientos</strong>
-        </div>
-        <div class="list">
-          <div class="item"><div class="title">Verduras Salteadas</div></div>
-          <div class="item"><div class="title">Papas doradas al romero</div></div>
-          <div class="item"><div class="title">Ensalada Casona (lechuga, rúcula, mizuna, tomate, manzana y semillas)</div></div>
+          <span class="small">
+            • Verduras Salteadas<br/>
+            • Papas doradas al romero<br/>
+            • Ensalada Casona (lechuga, rúcula, mizuna, tomate, manzana y semillas)
+          </span>
         </div>
 
         <div style="height:10px"></div>
