--- a/en/menu.html
+++ b/en/menu.html
@@ -77,11 +77,11 @@
 
         <div class="kv">
           <strong>Sides</strong>
-        </div>
-        <div class="list">
-          <div class="item"><div class="title">Sautéed vegetables</div></div>
-          <div class="item"><div class="title">Rosemary roasted potatoes</div></div>
-          <div class="item"><div class="title">Casona salad (lettuce, arugula, mizuna, tomato, apple and seeds)</div></div>
+          <span class="small">
+            • Sautéed vegetables<br/>
+            • Rosemary roasted potatoes<br/>
+            • Casona salad (lettuce, arugula, mizuna, tomato, apple and seeds)
+          </span>
         </div>
 
         <div style="height:10px"></div>
